youfull/objects/Market_Content__c.object
<CustomObject>
    <fields>
        <fullName>ALM_Page_Id__c</fullName>
        <inlineHelpText>Page Id of the ALM screen. This is required only when Type =&apos;Sales Leader Help&apos; or &apos;Zone/Division Help&apos;.</inlineHelpText>
        <label>ALM Page Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>HTML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Market Contents</relationshipLabel>
        <relationshipName>Market_Contents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <formula>HYPERLINK(&apos;/apex/ShowMarketDocument?pgId=&apos;&amp; ALM_Page_Id__c &amp;&apos;&amp;type=&apos;&amp; TEXT( Type__c ), &apos;Preview&apos;,&apos;_blank&apos;)</formula>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Levels__c</fullName>
        <inlineHelpText>0 = Candidate
1- UL
2-AUL
3-EUL
4-SEUL</inlineHelpText>
        <label>Title Levels</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Security and Privacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms and Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calculating Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glossary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eTools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Splash Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eMobile Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Activation Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Activation Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Alert Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Alerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt-In Terms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Zone Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Division Manager</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Market Content</label>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>